--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="/images/favicon-32x32.png"
     />
 
     <title>Advice generator app</title>
@@ -23,11 +23,62 @@
 
     <!-- TailwindCSS -->
     <link rel="stylesheet" href="./style.css" />
+
+    <script defer type="module" src="./index.js"></script>
   </head>
   <body>
-    <main>
-      <h1>Advice #<!-- Advice ID goes here --></h1>
-      <p class="text-quote">"<!-- Advice text goes here -->"</p>
+    <main
+      class="px-4 min-h-screen flex items-center justify-center bg-blue-dark"
+    >
+      <div
+        class="max-w-lg bg-blue-dark-grayish relative px-8 py-10 pb-14 text-center flex flex-col items-center gap-5 rounded-xl"
+      >
+        <h1 class="text-green-neon uppercase tracking-[0.3rem] text-xs flex">
+          Advice #<span id="advice-id">
+            <span
+              data-advice="loader"
+              class="w-8 h-4 block bg-green-neon rounded-sm animate-pulse"
+            >
+            </span>
+          </span>
+        </h1>
+
+        <p
+          class="text-quote text-cyan-light w-full h-full flex flex-col items-center gap-3"
+          id="advice-text"
+        >
+          <span
+            data-advice="loader"
+            class="w-3/4 h-9 rounded-md bg-cyan-light block animate-pulse"
+          >
+          </span>
+          <span
+            data-advice="loader"
+            class="w-11/12 h-9 rounded-md bg-cyan-light block animate-pulse"
+          >
+          </span>
+          <span
+            data-advice="loader"
+            class="w-8/12 h-9 rounded-md bg-cyan-light block animate-pulse"
+          >
+          </span>
+        </p>
+
+        <img
+          src="/images/pattern-divider-desktop.svg"
+          alt=""
+          class="mt-3"
+          aria-label="divider"
+        />
+
+        <button
+          class="absolute -bottom-[26px] left-1/2 -translate-x-1/2 bg-green-neon p-4 rounded-full outline-none transition-all duration-200 ease-in-out focus:ring-2 focus:ring-green-neon focus:ring-offset-2 focus:ring-offset-current active:scale-95 hover:scale-105 hover:shadow-advice-btn"
+          id="advice-generator"
+          aria-label="generate advice"
+        >
+          <img src="/images/icon-dice.svg" alt="" />
+        </button>
+      </div>
     </main>
   </body>
 </html>
